# VRing

./: CMakeLists.txt  README.md  main.cpp
include/: VList.hpp  buffer.hpp  camera.hpp  datatypes.hpp  gl.hpp  octotree.hpp  octree.hpp  shader.hpp  timer.hpp  voxel.hpp
shaders/: ColorFragmentShader.fragmentshader  TransformVertexShader.vertexshader  main.fs  main.gs  main.vs
src/: shader.cpp
